test/negative/213_bool_annot_mismatch.fx
// expect: type
val a: bool = 1
println(a)
